--- a/index.html
+++ b/index.html
@@ -2,8 +2,18 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meu Projeto</title>
+
     <link rel="stylesheet" href="reset.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css"
+    />
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
@@ -11,32 +21,76 @@
       <nav>
         <ul>
           <img src="./img/Logo_TV_2015.png" alt="Logo" />
-          <li>opcao 1</li>
-          <li>opcao 2</li>
-          <li>opcao 3</li>
-          <li>opcao 4</li>
-          <li>opcao 5</li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Produtos</a></li>
+          <li><a href="#">Galeria</a></li>
+          <li><a href="#">Promoções</a></li>
+          <li><a href="#">Fale Conosco</a></li>
         </ul>
       </nav>
     </header>
     <main>
       <h1>Título Principal</h1>
       <h5>
-        Aqui vai um texto Aqui vai um texto Aqui vai um texto Aqui vai um texto
-        Aqui vai um texto Aqui vai um texto Aqui vai um texto Aqui vai um texto
-        Aqui vai um texto Aqui vai um texto Aqui vai um texto Aqui vai um texto
-        Aqui vai um texto Aqui vai um texto Aqui vai um texto Aqui vai um texto
-        Aqui vai um texto Aqui vai um texto Aqui vai um texto Aqui vai um texto
-        Aqui vai um texto Aqui vai um texto Aqui vai um texto Aqui vai um texto
-        Aqui vai um texto Aqui vai um texto Aqui vai um texto Aqui vai um texto
-        Aqui vai um texto Aqui vai um texto Aqui vai um texto Aqui vai um texto
-        Aqui vai um texto Aqui vai um texto Aqui vai um texto Aqui vai um texto
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin in risus
+        eu nisi feugiat molestie sit amet vitae lectus. Nam eros dui, malesuada
+        nec lobortis ac, sodales ac mi. Cras vehicula efficitur consectetur.
+        Morbi mattis nibh diam, sit amet tincidunt sem vestibulum at.
+        Suspendisse ut scelerisque enim, vel aliquam orci. Phasellus luctus
+        aliquet sapien eget dignissim. Quisque dapibus lectus vel dapibus
+        rhoncus. Vestibulum ante ipsum primis in faucibus orci luctus et
+        ultrices posuere cubilia curae; Donec eget erat in sem commodo vehicula
+        vel a quam. Curabitur sit amet orci nulla. Praesent a ornare massa.
+        Morbi suscipit elit eu sapien aliquam maximus. Aenean erat tellus,
+        cursus at porta id, fringilla nec metus. Cras iaculis blandit enim, eu
+        sagittis metus. Donec pellentesque libero convallis libero ultricies
+        lacinia. Nulla dictum tellus eget porttitor mollis. Maecenas vel lectus
+        ut eros accumsan blandit.
       </h5>
-      <img class="principal" src="./img/Logo_TV_2015.png" alt="Imagem" />
+
+      <img class="principal" src="./img/caixa_de_som.jpg" alt="Caixa de som" />
     </main>
 
-    <footer>
-      <img src="./img/Logo_TV_2015.png" alt="Logo" />
-    </footer>
+    <div class="footer-dark">
+      <footer>
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-6 col-md-3 item">
+              <h3>Services</h3>
+              <ul>
+                <li><a href="#">Web design</a></li>
+                <li><a href="#">Development</a></li>
+                <li><a href="#">Hosting</a></li>
+              </ul>
+            </div>
+            <div class="col-sm-6 col-md-3 item">
+              <h3>About</h3>
+              <ul>
+                <li><a href="#">Company</a></li>
+                <li><a href="#">Team</a></li>
+                <li><a href="#">Careers</a></li>
+              </ul>
+            </div>
+            <div class="col-md-6 item text">
+              <h3>Company Name</h3>
+              <p>
+                Praesent sed lobortis mi. Suspendisse vel placerat ligula.
+                Vivamus ac sem lacus. Ut vehicula rhoncus elementum. Etiam quis
+                tristique lectus. Aliquam in arcu eget velit pulvinar dictum vel
+                in justo.
+              </p>
+            </div>
+            <div class="col item social">
+              <a href="#"><i class="icon ion-social-facebook"></i></a
+              ><a href="#"><i class="icon ion-social-twitter"></i></a
+              ><a href="#"><i class="icon ion-social-instagram"></i></a>
+            </div>
+          </div>
+          <p class="copyright">Company Name © 2018</p>
+        </div>
+      </footer>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
