--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       </nav>
     </header>
     <main>
+      <div>
       <h1>Título Principal</h1>
       <h5>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin in risus
@@ -49,6 +50,27 @@
       </h5>
 
       <img class="principal" src="./img/caixa_de_som.jpg" alt="Caixa de som" />
+    </div>
+      <h1 class="interseccao">Aqui está um texto de intersecção</h1>
+
+      <img class="principal" src="./img/caixa_de_som.jpg" alt="Caixa de som" />
+      <h1>Título Principal</h1>
+      <h5>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin in risus
+        eu nisi feugiat molestie sit amet vitae lectus. Nam eros dui, malesuada
+        nec lobortis ac, sodales ac mi. Cras vehicula efficitur consectetur.
+        Morbi mattis nibh diam, sit amet tincidunt sem vestibulum at.
+        Suspendisse ut scelerisque enim, vel aliquam orci. Phasellus luctus
+        aliquet sapien eget dignissim. Quisque dapibus lectus vel dapibus
+        rhoncus. Vestibulum ante ipsum primis in faucibus orci luctus et
+        ultrices posuere cubilia curae; Donec eget erat in sem commodo vehicula
+        vel a quam. Curabitur sit amet orci nulla. Praesent a ornare massa.
+        Morbi suscipit elit eu sapien aliquam maximus. Aenean erat tellus,
+        cursus at porta id, fringilla nec metus. Cras iaculis blandit enim, eu
+        sagittis metus. Donec pellentesque libero convallis libero ultricies
+        lacinia. Nulla dictum tellus eget porttitor mollis. Maecenas vel lectus
+        ut eros accumsan blandit.
+      </h5>
     </main>
 
     <div class="footer-dark">
